--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,10 @@ repositories {
     mavenCentral()
 }
 
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+}
+
 dependencies {
     testImplementation 'org.testng:testng:7.6.1'
     implementation 'org.seleniumhq.selenium:selenium-java:4.5.0'
@@ -17,7 +21,8 @@ dependencies {
 
 test {
     useTestNG() {
-        suites "src/test/resources/TestNG.xml"
-        systemProperty "browser", System.getProperty("browser")
+//        suites "src/test/resources/TestNG.xml"
+//        suites "src/test/resources/Regression.xml"
+        suites "src/test/resources/Smoke.xml"
     }
 }
